src/test/ui/error-codes/E0374.stderr
error[E0374]: the trait `CoerceUnsized` may only be implemented for a coercion between structures with one field being coerced, none found
  --> $DIR/E0374.rs:8:1
   |
LL | / impl<T, U> CoerceUnsized<Foo<U>> for Foo<T>
LL | |     where T: CoerceUnsized<U> {}
   | |________________________________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0374`.
